feat: Created page with information about developer

--- a/options.html
+++ b/options.html
@@ -2,22 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TabSize Settings</title>
+    <title>TabSize extension</title>
 </head>
 <body>
-    <label>
-        <span>Width of tab: </span>
-        <select id="tabWidth">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="4">4</option>
-            <option value="6">6</option>
-            <option value="8">8</option>
-            <option value="10">10</option>
-            <option value="12">12</option>
-            <option value="16">16</option>
-        </select>
-    </label>
-    <script src="options.js"></script>
+<h1>Hi! Thanks for using this extension.</h1>
+<p>If you want to help the extension - <a href="https://github.com/StipJey/TabSize">here</a> you can send pull requests</p>
+<p>If you want to help me, then <a href="https://money.yandex.ru/to/410015015933151">here</a> you can make a donation, or here</p>
+<iframe src="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=Thanks%20for%20the%20TabSize%20extension&targets-hint=&default-sum=30&button-text=14&hint=&successURL=&quickpay=shop&account=410015015933151" width="423" height="222" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
 </body>
 </html>
